# Row-A-text-editor

./: CMakeLists.txt  LICENSE  README.md  output.c  text_editor.h
main/: append_buffer.c  append_buffer.h  data.h  editor_operations.c  editor_operations.h  file.c  file.h  file_types.h  find.c  find.h  init.c  input.c  input.h  output.c  output.h  row.c  row.h  syntax_highlighting.c  syntax_highlighting.h  terminal.c  terminal.h  text_editor.c  text_editor.h
